[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "verifiable-memory-mcp"
version = "0.1.1"
description = "Verifiable memory for AI agents — 0% hallucination, cited, provably forgettable, deterministic. MCP server. CPU-only, no GPU, zero dependencies."
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Sergey", email = "svobodg@gmail.com"}]
keywords = ["mcp", "llm", "ai-agents", "hallucination", "memory", "rag", "verifiable", "knowledge-graph"]
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License"]
dependencies = []

[project.scripts]
verifiable-memory = "vmem.server:main"

[tool.setuptools]
packages = ["vmem"]
license-files = []
